# RAG4JZDQ

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Code Review Report.md  DEV_SPEC.md  Dockerfile  QA_TEST_PLAN.md  QA_TEST_PROGRESS.md  README.md  ad_tree.txt  check_db.py  check_metadata.py  crash_trace.txt  debug_mcp.txt  debug_mcp_asyncthread.txt  docker-compose.yml  fix_chroma_compaction.py  fix_fts.py  install_tesseract.bat  pyproject.toml  rebuild_bm25_correct.py  requirements.docker.txt  requirements.txt  setup.bat  setup.sh  setup_new_computer.ps1  start_dashboard.bat  start_dashboard.sh  start_vue.bat  start_vue.sh  stderr_only.txt  test_out.txt  test_output.txt  test_rag_pipeline.py  test_solution.py  test_trace.txt  (+1 more)
api/: crypto.py  db.py  deps.py  exceptions.py  main.py  models.py  security.py
config/: settings.yaml  settings.yaml.example
docs/: GUIDE_Antigravity_最小接入清单_2026-03-23.md  RESEARCH_Tantivy_Redis_评估报告.md  SOLUTION_Antigravity_全局能力白名单.md  SOLUTION_Antigravity_项目级配置草案.md  SOLUTION_everything-claude-code_跨项目落地方案_2026-03-23.md  SOLUTION_剩余工作收敛方案_2026-03-22.md  context.md  标书助手解决方案.md  系统审查与优化报告.md  需求4-标书智能化审查助手.md
log/: 2026-03-12_摄取管道修复与ChromaDB索引修复.md  2026-03-13_5.1代码质量改进方案.md  2026-03-13_系统工程评审报告.md  CHANGELOG_2026-03-15_RAG优化整改.md
scripts/: backfill_metadata.py  check_chroma.py  check_ingestion_history.py  check_pptx_progress.py  generate_manual_pdf.py  migrate_bm25_to_tantivy.py  pdf_to_md.py  rebuild_collection.py  rebuild_ingestion_history.py  reingest_pptx.py  repair_hnsw.py  repair_image_metadata.py  repair_metadata.py  test_bid_document.py  test_render.py  test_vl_models.py  translate_pdf.py
src/: __init__.py
tests/: _diag_retrieval.py  concurrent_sqlite_test.py  conftest.py  temp_debug_mcp.py  test_feedback_loop.py  test_ingestion_queue.py  test_suggested_questions.py  test_tantivy_indexer.py  test_thinking_logs.py  verify_image_opt.py
tmp/: transcribe.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
本体论/: 2026年Embedding要怎么选实测GeminijinaQwenBGEOpenAI十大模型.html  2026年Embedding要怎么选实测GeminijinaQwenBGEOpenAI十大模型.md  2026年构建RAG系统的核心策略从60到94准确率.html  2026年构建RAG系统的核心策略从60到94准确率.md  AIInfra学习路径潦潦草草版.html  AIInfra学习路径潦潦草草版.md  GPU为什么要划分为推理卡和训练卡.html  GPU为什么要划分为推理卡和训练卡.md  LLM训练全链路解析数据一次参数更新.html  LLM训练全链路解析数据一次参数更新.md  Palantir本体论入门.html  Palantir本体论入门.md  Palantir本体论建模平台深度解析.html  Palantir本体论建模平台深度解析.md  Palantir本体论把现实世界映射为一个可计算的知识图谱可执行系统.html  Palantir本体论把现实世界映射为一个可计算的知识图谱可执行系统.md  Palantir通俗拆解技术架构与数据本体论落地FoundryGothamApollo.html  Palantir通俗拆解技术架构与数据本体论落地FoundryGothamApollo.md  Paper2Poster丢进去一篇论文出来一张学术海报顺带扒一扒源码.html  Paper2Poster丢进去一篇论文出来一张学术海报顺带扒一扒源码.md  为什么OpenClaw很危险.html  为什么OpenClaw很危险.md  什么是知识图谱它和传统的关系型数据库有什么区别.html  什么是知识图谱它和传统的关系型数据库有什么区别.md  如何学习大模型推理平台技术栈.md  (+18 more)
(+366 files in other folders)
