[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modular-rag-mcp-server"
version = "0.1.0"
description = "A modular RAG (Retrieval-Augmented Generation) MCP Server for knowledge management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "rag", "retrieval", "llm", "knowledge-base"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心框架
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    
    # 配置与工具
    "pyyaml~=6.0.2",
    "httpx~=0.28.1",
    
    # LLM & Embedding
    "openai~=1.109.1",
    
    # 向量数据库 & 检索
    "chromadb~=1.4.1",
    "langchain-text-splitters>=0.3.0",
    "jieba~=0.42.1",
    
    # 文档解析
    "markitdown[pdf]~=0.1.5",
    "pymupdf>=1.24.0",           # PDF 图片提取
    "python-pptx>=1.0.0",        # PPTX 解析
    "pillow>=10.0.0",            # 图片处理
    
    # 重排序
    "sentence-transformers>=3.0.0",  # Cross-Encoder 重排序
    
    # MCP 协议
    "mcp~=1.26.0",
    
    # 可选功能
    "streamlit~=1.54.0",
    "ragas>=0.1.0",
    "datasets>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.14",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "openai>=1.0",
]
ml = [
    "FlagEmbedding>=1.2.0",  # BGE-M3 dense+sparse embedding
]
docling = [
    "docling>=2.0.0",  # IBM 深度学习 PDF 版面理解 (需 GPU)
]

[project.scripts]
mcp-server = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
    "e2e: End-to-end tests (full system tests)",
    "llm: marks tests that require real LLM API calls (deselect with '-m \"not llm\"')",
    "slow: Slow tests that should be run less frequently",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
